Added mobile media quary

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="features-text">
             <h2>FEATURES</h2>
             <h3>
-              Get a many of interesting <br />
+              Get many of interesting <br />
               features.
             </h3>
           </div>
@@ -174,7 +174,7 @@
       <div class="padding-container">
         <div class="heading">
           <h2>EXPERT CHEFS</h2>
-          <h3>Lets meet the expert</h3>
+          <h3>Let's meet the expert</h3>
         </div>
         <div class="absolute-image">
           <img src="./images/burger.png" alt="" />
@@ -266,7 +266,7 @@
               <h1>Chef's Kitchen.</h1>
             </div>
             <p>
-              Open an account in minutes, get full financial <br />
+              Open an account in minutes, get full financial 
               control for much longer.
             </p>
             <div class="social-fonts">
@@ -312,19 +312,18 @@
                  <li><a href="#">Recipe</a></li>
                  <li><a href="#">Gallery</a></li>
                </ul>
-             
-
-            
            </div>
         </div>
         <div class="footer-info">
-          <p>
-            @2025 - Chef's kitchen. Distributed By ThemeWagon and Developed by
-            <a href="">GetNextjsTemplates</a>
-          </p>
-          <div class="footer-links">
-            <a href="">privacy Policy</a>
-            <a href="">Terms & conditions</a>
+          <div class="footer-info-padding">
+            <p>
+              @2025 - Chef's kitchen. Distributed By Theme Wagon and Developed by
+              <a href="">GetNextjsTemplates</a>
+            </p>
+            <div class="footer-links">
+              <a href="">privacy Policy</a>
+              <a href="">Terms & conditions</a>
+            </div>
           </div>
         </div>
       </div>
